Initial draft. Proofed using Grammarly.

--- a/Content/D-Adjusting suspension-Topics/3-Adjusting rebound damping.htm
+++ b/Content/D-Adjusting suspension-Topics/3-Adjusting rebound damping.htm
@@ -4,10 +4,10 @@
     </head>
     <body>
         <h1>Adjusting rebound damping</h1>
-        <p>Rebound damping can be set statically. Unlike preload the static setting is the start point and adjustments are made on how the motorcycle feels when ridden.</p>
+        <p>Rebound damping can be set statically. Unlike preload, the static setting is the start point, and adjustments are made on how the motorcycle feels when ridden and indicators such as tyre wear.</p>
         <p>Setting rebound means controlling the speed the suspension returns to normal after experiencing a shock.</p>
         <h2>Front rebound</h2>
-        <p>Rebound damping adjuster might be marked REB or TEN (tension), depending on the manufacturer.</p>
+        <p>Depending on the manufacturer, the rebound damping adjuster might be marked REB or TEN (tension).</p>
         <p class="CentreAlign">
             <img src="../Resources/Images/Project/TopOfForkAdjusters.jpg" title="Tension or rebound adjustment on the top of the forks" alt="Tension or rebound adjustment on the top of the forks" MadCap:mediastyle="@media print { width: 100%; }" />
         </p>
@@ -22,12 +22,12 @@
                         <p>If it does, turn the rebound damping adjuster 1 click clockwise and try again.</p>
                     </li>
                     <li>
-                        <p>If it doesn't, turn the rebound damping adjuster 1 click counter clockwise and try again.</p>
+                        <p>If it doesn't, turn the rebound damping adjuster 1 click anticlockwise and try again.</p>
                     </li>
                 </ol>
             </li>
             <li>
-                <p>Continue compressing the suspension and checking rebound until it just stops at the end of the stroke. Ideally you will find a setting where rebound just starts to recompress and turn the adjuster one click clockwise.</p>
+                <p>Continue compressing the suspension and checking the rebound until it just stops at the end of the stroke. Ideally, you will find a setting where rebound just starts to recompress and turn the adjuster one click clockwise.</p>
             </li>
             <li>
                 <p>Record the setting.</p>
@@ -48,12 +48,12 @@
                         <p>If it does, turn the rebound damping adjuster 1 click clockwise and try again.</p>
                     </li>
                     <li>
-                        <p>If it doesn't, turn the rebound damping adjuster 1 click counter clockwise and try again.</p>
+                        <p>If it doesn't, turn the rebound damping adjuster 1 click anticlockwise and try again.</p>
                     </li>
                 </ol>
             </li>
             <li>
-                <p>Continue compressing the suspension and checking rebound until it just stops at the end of the stroke. Ideally you will find a setting where rebound just starts to recompress and turn the adjuster one click clockwise.</p>
+                <p>Continue compressing the suspension and checking the rebound until it just stops at the end of the stroke. Ideally, you will find a setting where rebound just starts to recompress and turn the adjuster one click clockwise.</p>
             </li>
             <li>
                 <p>Record the setting.</p>
@@ -62,19 +62,19 @@
         <h2>Balance</h2>
         <ol>
             <li>
-                <p>Push down on the middle of the bike and observe how it comes back to normal.</p>
+                <p>Push down on the middle of the bike and observe how it returns to rest.</p>
             </li>
             <li>
                 <p>Does either the front or the rear rebound quicker than the other end?</p>
             </li>
             <li>
-                <p>If so, adjust the rebound damping so both ends come back to the relaxed height at the same speed.</p>
+                <p>I3.	If so, adjust the rebound damping so both front and back return to rest height at the same speed.</p>
             </li>
             <li>
-                <p>Record the final settings, you can overwrite the initial settings to keep it simple.</p>
+                <p>Record the final settings; you can overwrite the initial settings to keep it simple.</p>
             </li>
         </ol>
         <p>The bike should rebound to its relaxed state in around one second.</p>
-        <p class="Important">When setting rebound it is important not to bounce on the suspension. If you apply the brake while pushing down, make sure you release it before letting the suspension return.</p>
+        <p class="Important">When setting rebound, it is important not to bounce on the suspension. If you apply the brake while pushing down, make sure you release it before letting the suspension return.</p>
     </body>
 </html>
