--- a/Content/D-Adjusting suspension-Topics/4-Adjusting compression damping.htm
+++ b/Content/D-Adjusting suspension-Topics/4-Adjusting compression damping.htm
@@ -4,22 +4,22 @@
     </head>
     <body>
         <h1>Adjusting compression damping</h1>
-        <p>It is hard to set compression damping statically. </p>
-        <p>Probably the best thing to do if you have no other data is set compression damping half way between fully closed and fully open.</p>
+        <p>It is hard to set compression damping statically.</p>
+        <p>If you have no other data, the best thing is to set compression damping halfway between fully closed and fully open.</p>
         <h2>Fork compression damping</h2>
         <p class="CentreAlign">
             <img src="../Resources/Images/Project/FrontLowCompressionAdjuster.jpg" title="Compression damping adjuster" alt="Compression damping adjuster on the bottom of the fork leg" MadCap:mediastyle="@media print { width: 50%; }" style="width: 50%;" />
         </p>
-        <p>Compression damping can be adjusted by a screw on the bottom of each fork leg, a screw on the top of each fork cap, or on one fork (while rebound is on the other).</p>
+        <p>Compression damping might be adjusted by a screw on the bottom of each fork leg, a screw on the top of each fork cap, or on one fork (while rebound is on the other).</p>
         <h2>Shock compression damping</h2>
         <p class="CentreAlign">
             <img src="../Resources/Images/Project/RearDampingAdjusters.jpg" alt="Rear damper with adjusters or clickers used to adjust rebound and compression damping" title="Damping adjustments on a rear damper" MadCap:mediastyle="@media print { width: 75%; }" />
         </p>
-        <p>Shock compression damping is usually on the big end, or cannister end, of the rear damper.</p>
+        <p>Shock compression damping is usually on the big end, or canister end, of the rear damper.</p>
         <p>Compression damping adjusters are usually marked COMP.</p>
-        <p>If you have another trusted setting, such as that from the owners manual, you can use that as a starting point.</p>
+        <p>If you have another trusted setting, such as that from the owner’s manual, you can use that as a starting point.</p>
         <p>Write down the settings you decided on.</p>
-        <p>Place a zip tie around the right hand fork leg. When the suspension compresses it will push the zip tie down. When you stop you can see how much travel has been uses.</p>
+        <p>Place a zip tie around the right-hand fork leg. When the suspension compresses, it will push the zip tie down. When you stop, you can see how much travel has been used during the ride.</p>
         <p>Öhlins also have a spring retained wiper that looks neater but is more expensive than a zip tie. The zip tie does the same job.</p>
     </body>
 </html>
