--- a/Content/D-Adjusting suspension-Topics/5-Refining the settings.htm
+++ b/Content/D-Adjusting suspension-Topics/5-Refining the settings.htm
@@ -5,7 +5,7 @@
     </head>
     <body>
         <h1 class="AvoidBreakBefore">Refining the settings</h1>
-        <p>Once you have completed the static settings you are ready to start testing.</p>
+        <p>Once you have completed the static settings, you are ready to start testing.</p>
         <p>To recap, you have:</p>
         <ol>
             <li>
@@ -20,10 +20,10 @@
                 </ol>
             </li>
             <li>
-                <p>Set rebound damping so the motorcycle recovers from compressing the suspension without going back to compress.</p>
+                <p>Set the rebound damping so the motorcycle recovers from compressing the suspension without going back to compress.</p>
             </li>
             <li>
-                <p>Set compression damping to the middle setting or other trusted setting.</p>
+                <p>Set the compression damping to the middle setting or other trusted setting.</p>
             </li>
             <li>
                 <p>Put a zip tie around the right fork.</p>
@@ -34,14 +34,14 @@
         </ol>
         <p>Get out and ride!</p>
         <p class="Important">When refining the settings work on one setting at a time and record any changes you make. It is also a good idea to note why you made the change.</p>
-        <p>When refining the settings you should know the symptoms of excessive adjustment. Make a note when you are testing that '<i>I am looking for ..</i>.'</p>
-        <p class="example">If you are adjusting compression damping on the front suspension and you are trying more damping (i.e., turning the adjuster clockwise to restrict oil flow and make the damping slower) you are looking for the suspension to feel harsher, and not use as much travel.</p>
+        <p>When refining the settings, you should know the symptoms of excessive adjustment. Make a note when you are testing that '<i>I am looking for ..</i>.'</p>
+        <p class="example">If you are adjusting compression damping on the front suspension and trying more damping (i.e., turning the adjuster clockwise to restrict oil flow and make the damping slower), you are looking for the suspension to feel harsher and not use as much travel.</p>
         <h2>What to look for</h2>
-        <p>You want a motorcycle that is smooth. You do not want to be jarred every time you go over a bump, you want the suspension to absorb the shock. You do not want a motorcycle that bounces up and down several times after a bump. You want the suspension to return to its normal state relative quickly, so it is ready for another bump. You want the bike easy to turn in, easy to straighten, and stable in a straight line. You want front and rear suspension to work at the same speed.</p>
-        <p>In an ideal world, you and the motorcycle remain on a flat and level course, while the wheels move up and down together following bumps and depressions.</p>
-        <p>Pick the setting you are going to refine first. It might be the one you think is furthest from optimum, or it might be the first in a continuous cycle of refinement.</p>
-        <p>If you are working from an initial set up, front compression damping is a good place to start. When that feels fairly good, start work on rear compression. Then try front rebound, then rear rebound.</p>
-        <p>If you have a zip tie on the front fork you will know whether compression damping is too fast (the zip tie is pushed all the way down) or too slow (the zip tie is over an inch from the bottom).</p>
+        <p>You want a motorcycle that is smooth. You do not want to be jarred every time you go over a bump; you want the suspension to absorb the shock. You do not want a motorcycle that bounces up and down several times after a bump. You want the suspension to return to its normal state quickly, so it is ready for another bump. You want the bike to be easy to turn in, straighten, and stable in a straight line. You want the front and rear suspension to work at the same speed.</p>
+        <p>In an ideal world, you and the motorcycle remain on a flat and level course while the wheels move up and down together following bumps and depressions.</p>
+        <p>Pick the setting you are going to refine first. It might be the one you think is furthest from optimum or the first in a continuous refinement cycle.</p>
+        <p>Front compression damping is a good start if you work from an initial setup. When that feels reasonably good, start work on rear compression. Then try front rebound, then rear rebound.</p>
+        <p>If you have a zip tie on the front fork, you will know whether compression damping is too fast (the zip tie is pushed all the way down) or too slow (the zip tie is over an inch from the bottom).</p>
         <h3>Front suspension</h3>
         <table style="mc-table-style: url('../Resources/TableStyles/SuspensionTable.css');width: 650px;" class="TableStyle-SuspensionTable" cellspacing="0">
             <col class="TableStyle-SuspensionTable-Column-Column1" style="width: 15%;" />
@@ -84,7 +84,7 @@
                                 <p class="CompactList">feels harsh over bumps</p>
                             </li>
                             <li class="CompactList">
-                                <p class="CompactList">tyre patter mid corner</p>
+                                <p class="CompactList">tyre patter mid-corner</p>
                             </li>
                         </ul>
                     </td>
@@ -236,14 +236,14 @@
                                 <p class="CompactList">rear wheel bumps sideways under acceleration out of corners</p>
                             </li>
                             <li>
-                                <p class="CompactList">bike squats under power and cause a loss of grip on the front</p>
+                                <p class="CompactList">bike squats under power and causes a loss of grip on the front</p>
                             </li>
                         </ul>
                     </td>
                     <td class="TableStyle-SuspensionTable-BodyA-Column1-Body1">
                         <ul>
                             <li>
-                                <p class="CompactList">rear tops out too fast under braking and the rear wheel loses contact with the ground</p>
+                                <p class="CompactList">rear tops out too fast under braking, and the rear wheel loses contact with the ground</p>
                             </li>
                             <li>
                                 <p class="CompactList">bike feels unstable, as if it is floating</p>
@@ -259,7 +259,7 @@
                 <p>Add or subtract one or two clicks from the damping being refined. Record the adjustment.</p>
             </li>
             <li>
-                <p>Ride the motorcycle for several days. </p>
+                <p>Ride the motorcycle for several days.</p>
                 <ol class="LowerAlpha">
                     <li>
                         <p>Make a note of how it feels.</p>
@@ -270,10 +270,10 @@
                 </ol>
             </li>
             <li>
-                <p>If the setting is not excessive and showing the indications listed in the table, try adding or subtracting more clicks. Record the adjustment.</p>
+                <p>If the setting is not excessive and shows the indications listed in the table, try adding or subtracting more clicks. Record the adjustment.</p>
             </li>
             <li>
-                <p>Continue the adjusting, recording, and riding cycle until signs of excessive adjustment are felt. When they are felt immediately undo the last adjustment.</p>
+                <p>Continue the adjusting, recording, and riding cycle until signs of excessive adjustment are felt. When they are felt, immediately undo the last adjustment.</p>
             </li>
             <li>
                 <p>Work back the other way. Record every adjustment and how it feels.</p>
@@ -286,7 +286,7 @@
             </li>
         </ol>
         <p>When that setting is set, follow the same procedure to refine the next.</p>
-        <p class="Important">If you are in the first or last 10 per cent of the range of adjustment you should consult a suspension specialist.</p>
-        <p class="Tip">Take the time every month or so to go for a ride and concentrate on what the suspension is doing. Evaluate what is happening, and what might be causing it.</p>
+        <p class="Important">If you are in the first or last 10 per cent of the adjustment range, you should consult a suspension specialist.</p>
+        <p class="Tip">Take the time every month or so to go for a ride and concentrate on what the suspension is doing. Evaluate what is happening and what might be causing it.</p>
     </body>
 </html>
