--- a/Content/E-Reference/FAQs.htm
+++ b/Content/E-Reference/FAQs.htm
@@ -10,7 +10,7 @@
             </MadCap:dropDownHead>
             <MadCap:dropDownBody>
                 <p>No. Suspension is not a black art.</p>
-                <p>Riders can learn what each adjustment does and use it to adjust the suspension to suit their weight and riding styles. Each adjuster follows a set of rules that provides a progressive change to how suspension reacts.</p>
+                <p>Riders can learn what each adjustment does and use it to adjust the suspension to suit their weight and riding styles. Each adjuster follows a set of rules that provides a progressive change to how the suspension reacts.</p>
             </MadCap:dropDownBody>
         </MadCap:dropDown>
         <MadCap:dropDown>
@@ -24,11 +24,11 @@
         </MadCap:dropDown>
         <MadCap:dropDown>
             <MadCap:dropDownHead>
-                <MadCap:dropDownHotspot>The manufacturer set it that way, why should I change it?</MadCap:dropDownHotspot>
+                <MadCap:dropDownHotspot>The manufacturer set it that way; why should I change it?</MadCap:dropDownHotspot>
             </MadCap:dropDownHead>
             <MadCap:dropDownBody>
                 <p>Do you ride under the same conditions as the factory test? Are you the same weight as the factory test rider, and do you have similar riding styles? Did the factory test their settings on the roads you ride?</p>
-                <p>Of course not, so adjusting suspension for your weight, riding styles, and where you ride helps make the bike fit you.</p>
+                <p>Of course not, so adjusting thesuspension for your weight, riding style, and where you ride helps make the bike fit you.</p>
             </MadCap:dropDownBody>
         </MadCap:dropDown>
     </body>
