--- a/Content/E-Reference/SetupSheets.htm
+++ b/Content/E-Reference/SetupSheets.htm
@@ -126,7 +126,7 @@
                 </tr>
                 <tr class="TableStyle-SuspensionTable-Body-Body1">
                     <td style="text-align: left;" class="TableStyle-SuspensionTable-BodyE-Column1-Body1">
-                        <p>8. Rider and bike. Lift up, let down.</p>
+                        <p>8. Rider and bike. Lift , and let down.</p>
                     </td>
                     <td class="TableStyle-SuspensionTable-BodyE-Column1-Body1">&#160;</td>
                     <td class="TableStyle-SuspensionTable-BodyE-Column1-Body1">&#160;</td>
@@ -153,7 +153,7 @@
                 </tr>
             </tbody>
         </table>
-        <p class="AvoidBreakAfter">If you are using a sag scale that you can zero with the suspension fully extended the calculations are slightly different:</p>
+        <p class="AvoidBreakAfter">If you are using a sag scale that you can zero with the suspension fully extended, the calculations are slightly different:</p>
         <table style="width: 100%;mc-table-style: url('../Resources/TableStyles/SuspensionTable.css');" class="TableStyle-SuspensionTable" cellspacing="0">
             <col class="TableStyle-SuspensionTable-Column-Column1" />
             <col class="TableStyle-SuspensionTable-Column-Column1" style="width: 10%;" />
@@ -221,7 +221,7 @@
                 </tr>
                 <tr class="TableStyle-SuspensionTable-Body-Body1">
                     <td style="text-align: left;" class="TableStyle-SuspensionTable-BodyE-Column1-Body1">
-                        <p>2. Suspension under bike weight only. Lift up, let down.</p>
+                        <p>2. Suspension under bike weight only. Lift , and let down.</p>
                     </td>
                     <td class="TableStyle-SuspensionTable-BodyE-Column1-Body1">&#160;</td>
                     <td class="TableStyle-SuspensionTable-BodyE-Column1-Body1">&#160;</td>
@@ -257,7 +257,7 @@
                 </tr>
                 <tr class="TableStyle-SuspensionTable-Body-Body1">
                     <td style="text-align: left;" class="TableStyle-SuspensionTable-BodyE-Column1-Body1">
-                        <p>6. Rider and bike. Lift up, let down.</p>
+                        <p>6. Rider and bike. Lift, and let down.</p>
                     </td>
                     <td class="TableStyle-SuspensionTable-BodyE-Column1-Body1">&#160;</td>
                     <td class="TableStyle-SuspensionTable-BodyE-Column1-Body1">&#160;</td>
@@ -276,7 +276,7 @@
             </tbody>
         </table>
         <p>Rider sag is the sag figure.</p>
-        <p>Stiction can indicate the suspension's condition.  The lower the number, the better. Front suspension is fine if it is less than 15 mm. Good rear suspension has about 3 mm, bad is 10 mm.</p>
+        <p>Stiction can indicate the suspension's condition.  The lower the number, the better. Front suspension is fine if it is less than 15 mm. Good rear suspension has about 3 mm, and bad is 10 mm.</p>
         <h2>Comparing sag to available travel</h2>
         <table style="width: 100%;mc-table-style: url('../Resources/TableStyles/SuspensionTable.css');" class="TableStyle-SuspensionTable" cellspacing="0">
             <col class="TableStyle-SuspensionTable-Column-Column1" />
@@ -370,7 +370,7 @@
                 </tr>
             </tbody>
         </table>
-        <p>For road use around 30-35% is ideal, depending on your riding style and the roads you ride on. For track bikes try for 25 to 35% depending on your riding style, skill and experience, and the track's bumpiness.</p>
+        <p>For road use, around 30-35% is ideal, depending on your riding style and the roads you ride on. For track bikes, try for 25 to 35% depending on your riding style, skill and experience, and the track's bumpiness.</p>
         <h2>Damping figures</h2>
         <table style="width: 100%;mc-table-style: url('../Resources/TableStyles/SuspensionTable.css');" class="TableStyle-SuspensionTable" cellspacing="0">
             <col class="TableStyle-SuspensionTable-Column-Column1" />
