Initial draft. Proofed by Wiggie.

--- a/Content/A-Frontmatter-Topics/Title.htm
+++ b/Content/A-Frontmatter-Topics/Title.htm
@@ -6,7 +6,8 @@
         <p class="title"><MadCap:variable name="General.UserGuideTitle" />
         </p>
         <p>Version <MadCap:variable name="General.VersionNumber" /></p>
-        <p class="title-page-footer">A beginners guide to setting up motorcycle suspension</p>
+        <p class="title-page-footer"><span style="font-size: 18pt;">A beginners guide to setting up motorcycle suspension</span>
+        </p>
         <p class="title-page-url"><a href="http://help.madcapsoftware.com/" target="_blank" alt="MadCap Software online documentation"><MadCap:variable name="General.CompanyName" /></a>
         </p>
     </body>
