--- a/Content/B-Introduction-Topics/3-What do you need to adust your suspension.htm
+++ b/Content/B-Introduction-Topics/3-What do you need to adust your suspension.htm
@@ -6,7 +6,7 @@
         <h1>What do you need to adjust your suspension?</h1>
         <p>You are going to need some basic tools.</p>
         <p>Do not try and make do; adjusting the preload  ring on your rear damper with a hammer and chisel (or worse, a screwdriver) will damage your tools and the abused suspension components.</p>
-        <p>Buy, beg, or borrow the right tools. Several riders can form a syndicate for more expensive items and buy something between them.</p>
+        <p>Buy, beg, or borrow the right tools. Several riders can form a syndicate for more expensive items and share costs.</p>
         <h2>Basic tools</h2>
         <p>As a minimum, you will need:</p>
         <ul>
