--- a/Content/C-About suspension-Topics/2-Spring preload.htm
+++ b/Content/C-About suspension-Topics/2-Spring preload.htm
@@ -4,14 +4,14 @@
     </head>
     <body>
         <h1>Spring preload</h1>
-        <p>Most people are familiar with springs. They range in size from minuscule, such as in a watch, to huge.</p>
+        <p>Most people are familiar with springs. They range in size from tiny, such as in a watch, to huge.</p>
         <h2>Spring types</h2>
         <p>Springs come in several different forms. They all store energy and release it once the load is reduced. There is some energy lost through internal friction that is converted to heat.</p>
         <p>A spring can be a flat piece of steel that bends and returns to its original shape. Several can be added together. This sort of spring is a leaf spring.</p>
         <p class="CentreAlign">
             <img src="../Resources/Images/Project/Leaf Spring.png" title="Leaf spring" alt="A leaf spring is a flat piece of metal that nees a pivot on at least one end to allow it to bend" class="CentreAlign" style="width: 400px;" />
         </p>
-        <p>Springs can also be a bar, bent or otherwise offset on each end. Pushing on the bent arm causes the straight piece in the middle to twist. This type of spring is a torsion bar.</p>
+        <p>Springs can also be a bar, bent or otherwise offset on each end. Pushing on the arm causes the straight piece in the middle to twist. This type of spring is a torsion bar.</p>
         <p class="CentreAlign">
             <img src="../Resources/Images/Project/Torsion bar.png" style="width: 250px;" title="Torsion bar" alt="Torsion bars store energy when they are twisted" MadCap:mediastyle="@media print { width: 50%; }" />
         </p>
@@ -19,7 +19,7 @@
         <p class="CentreAlign">
             <img src="../Resources/Images/Project/Watch spring.png" title="Watch spring" alt="A spiral spring can store energy when it is pulled out, or when wound tight" style="width: 148px;" />
         </p>
-        <p>The most common spring on motorcycle suspension is a coil spring. Metal is wound in a coil. Compression coil springs have gaps between the coils and resist being pushed together, while extension springs have no gaps and resist being pulled apart. Coils can be seen externally, wrapped over or around something, or they can be housed inside tubing (think motorcycle forks) and out of sight.</p>
+        <p>The most common spring on motorcycle suspension is a coil spring. Metal is wound in a coil. Compression coil springs have gaps between the coils and resist being pushed together, while extension springs have no gaps and resist being pulled apart. Coils can be seen externally, wrapped over or around something, or they can be housed inside tubing (think motorcycle forks) out of sight.</p>
         <p class="CentreAlign">
             <img src="../Resources/Images/Project/coil spring.png" title="Coil spring" alt="Coils springs are wound around and have a constant diameter" style="width: 33%;" />
         </p>
