--- a/Content/C-About suspension-Topics/3-Damping.htm
+++ b/Content/C-About suspension-Topics/3-Damping.htm
@@ -5,7 +5,7 @@
     <body>
         <h1>Damping</h1>
         <p>Springs store energy by compressing (or extending, depending on the spring type). When the load is released, the spring unleashes the energy, returning to its original form. Depending on the amount of energy, it might extend past its stable length and then return. This oscillation can happen for multiple cycles, compressing and extending until all the energy is spent through overcoming friction.</p>
-        <p>Ideally, motorcycle suspension should not go through several extensions and compressions. This repeated cycle would leave the spring ill-equipped for another load as the load might occur mid-cycle.</p>
+        <p>Ideally, motorcycle suspension should not go through several extensions and compressions. This repeated cycle would leave the spring ill-equipped for another shock if it occurs mid-cycle.</p>
         <p>Suspension springs, therefore, have damping.</p>
         <p>Damping controls the spring’s compression and extension, or travel, by using energy elsewhere. Excess energy is turned to heat, controlling the speed the spring absorbs the impact and returns to its relaxed form.</p>
         <p>Originally, engineers tried to dampen using rubber blocks, creating friction to control the spring’s movement.</p>
