--- a/Content/D-Adjusting suspension-Topics/2-Adjusting preload.htm
+++ b/Content/D-Adjusting suspension-Topics/2-Adjusting preload.htm
@@ -5,7 +5,7 @@
     </head>
     <body>
         <h1>Adjusting preload</h1>
-        <p>The first step in adjusting the suspension is to adjust the preload.</p>
+        <p>The first step in adjusting suspension is to adjust the preload.</p>
         <p>There are three measurements used in setting preload:</p>
         <ol>
             <li>
@@ -84,9 +84,9 @@
                     <div>the measurement with the rider on the bike is 90 mm</div>
                 </li>
             </ul>
-            <p>Static sag is 125 mm minus 105 mm or 20 millimetres.</p>
-            <p>Rider sag is 105 mm minus 90 mm or 15 millimetres.</p>
-            <p>The total sag is 125 mm minus 90 mm or 35 millimetres. It can also be calculated by adding 20 mm to 15 mm.</p>
+            <p>Static sag is 125 mm minus 105 mm, equal to 20 millimetres.</p>
+            <p>Rider sag is 105 mm minus 90 mm, equal to 15 millimetres.</p>
+            <p>The total sag is 125 mm minus 90 mm, equal to 35 millimetres. It can also be calculated by adding 20 mm to 15 mm.</p>
         </div>
         <ol MadCap:continue="true">
             <li>
@@ -130,7 +130,7 @@
                     <p>the original total sag was 35 mm</p>
                 </li>
                 <li>
-                    <p>the preload was reduced by 2 turns</p>
+                    <p>the preload was reduced by 2 turns </p>
                 </li>
                 <li>
                     <p>the new total sag is 37 mm</p>
@@ -191,9 +191,9 @@
                     <div>the measurement with the rider on the bike is 70 mm</div>
                 </li>
             </ul>
-            <p>Static sag is 120 mm minus 105 mm or 15 millimetres.</p>
-            <p>Rider sag is 105 mm minus 70 mm or 35 millimetres.</p>
-            <p>The total sag is 120 mm minus 70 mm or 50 millimetres.</p>
+            <p>Static sag is 120 mm minus 105 mm, equal to 15 millimetres.</p>
+            <p>Rider sag is 105 mm minus 70 mm, equal to 35 millimetres.</p>
+            <p>The total sag is 120 mm minus 70 mm, equal to 50 millimetres.</p>
             <p>50 mm divided by 120 x 100 is 41 per cent.</p>
         </div>
         <p>41 per cent is too high, so preload will need to be added.</p>
@@ -243,7 +243,7 @@
             </ul>
         </div>
         <p>The total sag in the example is 40 millimetres at the front, and the rear is 38 millimetres, so the bike is slightly higher at the back. The percentages are relatively close at 32 per cent each. These measurements mean a baseline has been established.</p>
-        <p class="Important">If you are in the first or last 10 per cent of the adjustment range or cannot get sag within the stated range, you should consult a suspension specialist. You might need a spring with a higher or lower rate to make it safe for you.</p>
+        <p class="Important">If you are in the first or last 10 per cent of the adjustment range or cannot get sag within the stated range, you should consult a suspension specialist. You might need a spring with a higher or lower rate to make it safe.</p>
         <h2>Sag measuring tools</h2>
         <p>Sag measuring tools make the job much easier.</p>
         <p>They attach magnetically to the axle and another point. Little hooks with adhesive backs can be used, ensuring the same point is used. A cable extends between the tool and the attachment point. Some tools have a hook on a Velcro strip that can be used for the second point on the forks.</p>
