--- a/Content/D-Adjusting suspension-Topics/3-Adjusting rebound damping.htm
+++ b/Content/D-Adjusting suspension-Topics/3-Adjusting rebound damping.htm
@@ -68,7 +68,7 @@
                 <p>Does either the front or the rear rebound quicker than the other end?</p>
             </li>
             <li>
-                <p>I3.	If so, adjust the rebound damping so both front and back return to rest height at the same speed.</p>
+                <p>If so, adjust the rebound damping so both front and back return to rest height at the same speed.</p>
             </li>
             <li>
                 <p>Record the final settings; you can overwrite the initial settings to keep it simple.</p>
