--- a/Content/D-Adjusting suspension-Topics/5-Refining the settings.htm
+++ b/Content/D-Adjusting suspension-Topics/5-Refining the settings.htm
@@ -26,10 +26,10 @@
                 <p>Set the compression damping to the middle setting or other trusted setting.</p>
             </li>
             <li>
-                <p>Put a zip tie around the right fork.</p>
+                <p class="Tip">Recorded the settings.</p>
             </li>
             <li>
-                <p>Recorded the settings.</p>
+                <p>Put a zip tie around the right fork.</p>
             </li>
         </ol>
         <p>Get out and ride!</p>
@@ -37,7 +37,7 @@
         <p>When refining the settings, you should know the symptoms of excessive adjustment. Make a note when you are testing that '<i>I am looking for ..</i>.'</p>
         <p class="example">If you are adjusting compression damping on the front suspension and trying more damping (i.e., turning the adjuster clockwise to restrict oil flow and make the damping slower), you are looking for the suspension to feel harsher and not use as much travel.</p>
         <h2>What to look for</h2>
-        <p>You want a motorcycle that is smooth. You do not want to be jarred every time you go over a bump; you want the suspension to absorb the shock. You do not want a motorcycle that bounces up and down several times after a bump. You want the suspension to return to its normal state quickly, so it is ready for another bump. You want the bike to be easy to turn in, straighten, and stable in a straight line. You want the front and rear suspension to work at the same speed.</p>
+        <p>You want a motorcycle that is smooth. You do not want to be jarred every time you go over a bump; you want the suspension to absorb the shock. You do not want a motorcycle that bounces up and down several times after a bump. You want the suspension to return to its normal state quickly, so it is ready for another bump. You want the bike to be easy to turn in, straighten, and remain stable in a straight line. You want the front and rear suspension to work at the same speed.</p>
         <p>In an ideal world, you and the motorcycle remain on a flat and level course while the wheels move up and down together following bumps and depressions.</p>
         <p>Pick the setting you are going to refine first. It might be the one you think is furthest from optimum or the first in a continuous refinement cycle.</p>
         <p>Front compression damping is a good start if you work from an initial setup. When that feels reasonably good, start work on rear compression. Then try front rebound, then rear rebound.</p>
