--- a/Content/C-About suspension-Topics/5-Compression damping.htm
+++ b/Content/C-About suspension-Topics/5-Compression damping.htm
@@ -4,10 +4,10 @@
     </head>
     <body>
         <h2>Compression damping</h2>
-        <p>Compression damping controls the speed a spring absorbs energy. It is the opposite to rebound damping.</p>
+        <p>Compression damping controls the speed at which a spring absorbs energy. It is the opposite to rebound damping.</p>
         <p>If compression damping is too slow, it will limit the spring's ability to absorb bumps. </p>
         <p>Compression damping is adjusted the same way as rebound damping, opening or closing a flow control to allow more or less fluid to flow.</p>
-        <p>Compression adjustments might be found at the bottom of the forks. On some motorcycles, they are at the top of the forks, with rebound damping adjusted on one leg and compression damping on the other. The adjuster is usually at the bottom or canister end of the shock absorber on the rear shock.</p>
+        <p>Compression adjustments are often found at the bottom of the forks. On some motorcycles, they are at the top of the forks, with rebound damping adjusted on one leg and compression damping on the other. The adjuster is usually at the bottom or canister end of the shock absorber on the rear shock.</p>
         <p>Some motorcycles have two compression damping adjusters—one for low-speed damping and the other for high-speed. Speed does not mean the speed the motorcycle is travelling but the speed at which the bump is compressing the spring.</p>
     </body>
 </html>
