Finalising first draft.

--- a/Content/A-Frontmatter-Topics/EmptyPage.htm
+++ b/Content/A-Frontmatter-Topics/EmptyPage.htm
@@ -2,8 +2,5 @@
 <html xmlns:MadCap="http://www.madcapsoftware.com/Schemas/MadCap.xsd">
     <head>
     </head>
-    <body>
-        <p class="ForcePageBreak"><span style="color: #b0c4de;">1</span>
-        </p>
-    </body>
+    <body>&#160;</body>
 </html>
