--- a/Content/E-Reference/SetupSheets.htm
+++ b/Content/E-Reference/SetupSheets.htm
@@ -4,7 +4,7 @@
         <link href="../Resources/TableStyles/SuspensionTable.css" rel="stylesheet" MadCap:stylesheetType="table" />
     </head>
     <body>
-        <h1>Set up sheets</h1>
+        <h1 class="ForcePageBreak">Set up sheets</h1>
         <p>Use these sheets to record the current and new settings.</p>
         <h2>Measuring sag</h2>
         <table style="width: 100%;mc-table-style: url('../Resources/TableStyles/SuspensionTable.css');" class="TableStyle-SuspensionTable" cellspacing="0">
@@ -421,5 +421,8 @@
                 </tr>
             </tbody>
         </table>
+        <p MadCap:conditions="Default.ExcludeSetupsheetDownload">A download of these setup sheets is available <a href="http://motorcyclementors.info/suspension/downloads/Setupsheets.pdf" target="_popup" title="Download a copy of these setup sheets" alt="Link to a downloadable pdf">here</a>.</p>
+        <p>A downloadable Excel spreadsheet that helps calculate and record suspension settings is available <a href="https://motorcyclementors.info/suspension/downloads/Suspension settings.xlsx" target="_popup" title="Download an Excel spreadsheet here." alt="Link to a downloadable Excel spreadsheet for calculating and recording suspension setups.">here</a>.</p>
+        <p MadCap:conditions="Default.ScreenOnly,Default.Mobile,Default.Tablet,Default.Web">A pdf version of this guide is available <a href="http://motorcyclementors.info/suspension/downloads/SuspensionGuide.pdf" target="_blank" title="A pdf version of this guide can be downlaoded through this link" alt="Download a pdf version of this guide using the link.">here</a>.</p>
     </body>
 </html>
